--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ html {
   max-width: 30rem;
   margin: 5rem auto;
 }
-
+/* 
 .joke {
   margin-bottom: 2rem;
 }
@@ -87,3 +87,4 @@ html {
   background-color: #ff5654;
   background-image: url('img/like-down.png');
 }
+ */
